<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@color/msu_green"
                android:fontFamily="@font/baloo_bhai_2"
                android:onClick="onBack"
                android:text="@string/back_button"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TitleLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo_bhaijaan"
                android:gravity="center_horizontal"
                android:text="@string/profile_title"
                android:textColor="@color/msu_dark_green"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/ScoreLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/baloo_bhai_2_semibold"
                    android:gravity="center"
                    android:text="@string/statistics"
                    android:textSize="24sp" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TableRow
                    android:id="@+id/NameRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:text="@string/display_name"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/IDRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/pass_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:text="@string/uid"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/EmailRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:text="@string/email"
                        android:textSize="24sp" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/msu_light_green"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:text="@string/change_display"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/msu_light_green"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:text="@string/change_pass"
                        android:textSize="14sp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#000000"
                android:fontFamily="@font/baloo_bhai_2_semibold"
                android:onClick="onSignOut"
                android:text="@string/sign_out"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>