<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeDisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@color/msu_green"
                android:fontFamily="@font/baloo_bhai_2"
                android:onClick="onProfile"
                android:text="@string/back_button"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:fontFamily="@font/baloo_bhaijaan"
                    android:gravity="center_horizontal"
                    android:text="@string/change_display"
                    android:textColor="@color/msu_green"
                    android:textSize="34sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingTop="70dp"
                    android:paddingBottom="70dp">

                    <TextView
                        android:id="@+id/changePrompt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:text="@string/display_name_info"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/old_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/baloo_bhai_2_semibold"
                        android:text="@string/username"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/oldUsername"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints="username"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:hint="@string/display_name_hint"
                        android:inputType="text"
                        android:textColorHint="#444444"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/new_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/baloo_bhai_2_semibold"
                        android:text="@string/new_username_label"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/newUsername"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints="password"
                        android:fontFamily="@font/baloo_bhai_2"
                        android:hint="@string/new_display_name_hint"
                        android:inputType="text"
                        android:textColorHint="#444444"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/submit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:backgroundTint="@color/msu_green"
                        android:fontFamily="@font/baloo_bhai_2_semibold"
                        android:gravity="center_horizontal|center_vertical"
                        android:onClick="onSubmit"
                        android:text="@string/submit_button"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>