<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/gamelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".GameActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gameRoundsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@android:string/untitled"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/baloo_bhai_2_semibold"
                android:textColor="@color/msu_dark_green"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/gamePointsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@android:string/untitled"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/baloo_bhai_2_semibold"
                android:textColor="@color/msu_dark_green"
                android:textSize="24sp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/gameheadingtext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/baloo_bhai_2_semibold"
            android:gravity="center"
            android:text="@string/game_heading"
            android:textColor="@color/msu_dark_green"
            android:textSize="24sp" />

<!--        From https://github.com/davemorrissey/subsampling-scale-image-view. Replaces the regular imageView-->
<!--        with a SubsamplingScaleImageView. Allows the user to zoom in/out of an image. (Approved by professor)-->

        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
            android:id="@+id/gamedestinationimage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            android:contentDescription="@string/game_image_desc"
            app:srcCompat="@drawable/broad" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/gamearrivedbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:backgroundTint="@color/msu_green"
                android:fontFamily="@font/baloo_bhaijaan"
                android:onClick="onCheckLocation"
                android:text="@string/game_arrived_button"
                tools:ignore="UsingOnClickInXml" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameoverlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/gameOverTitleText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gameover_title"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/gameOverScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gameover_scoretext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/gameOverMainMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onMainMenu"
                android:text="@string/gameover_mainmenu_button"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/gameOverNewGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onNewGame"
                android:text="@string/gameover_newgame"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>